updated the send button to test functionality

--- a/index.html
+++ b/index.html
@@ -175,7 +175,7 @@
 											</div>
 										</div>
 										<ul class="actions">
-											<li type="submit" value="Send"><a href="" class="button submit">Send Message</a></li>
+											<li ><a type="submit" value="Send" class="button submit">Send Message</a></li>
 										</ul>
 									</form>
 								</section>
