form isn't working, need to work on it tomorrow

--- a/index.html
+++ b/index.html
@@ -11,6 +11,9 @@
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+		<!--
+			the email functionality isn't working, need to hit up a homie for a lil help
+		-->
 		<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/@emailjs/browser@3/dist/email.min.js"></script>
     	<script type="text/javascript">
     	    (function() {
