resizing some photos

--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/science.jpg" alt="" data-position="top center" /></a>
+							<a href="#" class="image"><img src="images/science1.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Scientist</h2>
