resized photo and reworded some text

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Scientist</h2>
-									<p>I have a bachelors degree in Microbiology, specialize in genetic engineering, and have 5 years research experience</p>
+									<p>I have a bachelors degree in Microbiology, specialize in genetic engineering, and have 5 years research and clinical testing experience</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
