--- a/index.html
+++ b/index.html
@@ -115,11 +115,11 @@
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>What does Mark do?</h2>
-							<p>Mark is a grade A team player, can code in HTML, JS, CSS, Python, and SQL.</p>
+							<p>Mark is a grade A team player, who can code in HTML, JS, CSS, Python, and SQL.</p>
 							<div class="features">
 								<section>
 									<span class="icon solid major fa-code"></span>
-									<h3>React</h3>
+									<h3>JavaScript, React, Redux, Git, JSON Web Tokens, Express, MongoDB, Node.js, HTML Canvas</h3>
 									<p><abbr title="JavaScript">JS</abbr> being displayed as a <abbr title="HyperText Markup Language">HTML</abbr> for your viewing pleasure</p>
 								</section>
 								<section>
