edited the images and the skills section

--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 								<section>
 									<span class="icon solid major fa-code"></span>
 									<h3>JavaScript, React, Redux, Git, JSON Web Tokens, Express, MongoDB, Node.js, HTML Canvas</h3>
-									<p><abbr title="JavaScript">JS</abbr> being displayed as a <abbr title="HyperText Markup Language">HTML</abbr> for your viewing pleasure</p>
+									<p>Are just some examples of code and services I am proficient in</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-lock"></span>
@@ -129,23 +129,23 @@
 								</section>
 								<section>
 									<span class="icon solid major fa-cog"></span>
-									<h3>A Professional Cog</h3>
-									<p>A hard worker and a perfect fit for your industrial profiteering machine</p>
+									<h3>A Passionate Web-Designer</h3>
+									<p>A professional at making your artistic vision a reality</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
-									<h3>A Passionate Designer</h3>
-									<p>A professional at making your artistic vision a reality</p>
+									<h3>A Passionate Designer For Any Screen</h3>
+									<p>Experience in making apps for any screen size</p>
 								</section>
 								<section>
 									<span class="icon solid major fa-link"></span>
 									<h3>Expert in Client Relations</h3>
-									<p>From my experience in the service industry, I have mastered the art of conflict resolution</p>
+									<p>From my experience in the service industry, public health, and research I have mastered the art of conflict resolution</p>
 								</section>
 								<section>
 									<span class="icon major fa-gem"></span>
 									<h3>A True Diamond in the Rough</h3>
-									<p>I am smart, passionate, and an incredibly quick learner. I put together this site within 3 months of learning how to code</p>
+									<p>I am smart, passionate, and an incredibly quick learner. I put together this site within 3 months of learning how to code in JS</p>
 								</section>
 							</div>
 							<ul class="actions">
