added new photos

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 							<div class="content">
 								<div class="inner">
 									<h2>Front End Developer</h2>
-									<p>I am a fresh recruit eager to dive into the world of web design</p>
+									<p>I am a eager to dive into the web design work you have for me!</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
 									</ul>
@@ -96,12 +96,12 @@
 							</div>
 						</section>
 						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+							<a href="#" class="image"><img src="images/travel.JPG" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Ever-Present Proof to the Duality of Man</h2>
-									<p>I love outdoor sports and activities, such as rock climbing, mountain biking, and snowboarding. <br /> 
-									While simultaneously being an avid gamer and coder, I am proof that there is no "type" of nerd or coder
+									<p>I love outdoor sports and activities, such as rock climbing, hiking, mountain biking, and snowboarding. <br /> 
+									While simultaneously being an avid gamer and coder, I am proof that there is no "type" of nerd or coder.
 									</p>
 									<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
