--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/poncho.JPG" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
 									<h2>Front End Developer</h2>
@@ -134,7 +134,7 @@
 								</section>
 								<section>
 									<span class="icon solid major fa-desktop"></span>
-									<h3>A Passionate Designer For Any Screen</h3>
+									<h3>A Skilled Designer For Any Screen</h3>
 									<p>Experience in making apps for any screen size</p>
 								</section>
 								<section>
