updated with new show finder app

--- a/generic.html
+++ b/generic.html
@@ -33,9 +33,9 @@
 					<section id="main" class="wrapper">
 						<div class="inner">
 							<h1 class="major">Project of the Week</h1>
-							<span class="image fit"><a href="https://github.com/brendagonzalezvalle/group-project-vschool"><img src="images/meme-title.png" alt="" /></span></a>
-							<p>This is a simple meme generator that will automatically update the text position to be at the bottom or top of each image. Clicking the image will take you to the Github page.</p>
-							<p>This app was a collaborative project with Brenda Gonzalez and Adam Domnie.</p>
+							<span class="image fit"><a href="https://github.com/mark-faulkner976/assignments2/tree/main/stream-finder"><img src="images/show-finder.png" alt="" /></span></a>
+							<p>This is a simple website with signup/login functionality to find and save a list of where your favorite shows are streaming. Clicking the image will take you to the Github page.</p>
+							<p><a href="https://show-finder.onrender.com/">Click here to go to the website. Please check with yours truly if the site is up and running first! After a while the site will spin down.</a></p>
 						</div>
 					</section>
 
