--- a/generic.html
+++ b/generic.html
@@ -16,7 +16,7 @@
 
 		<!-- Header -->
 			<header id="header">
-				<a href="index.html" class="title">Hyperspace</a>
+				<a href="index.html" class="title">Back to Home Page</a>
 				<nav>
 					<ul>
 						<li><a href="index.html">Home</a></li>
